--- a/ts/note/初始化.md
+++ b/ts/note/初始化.md
@@ -1,5 +1,6 @@
 # 1. 初始化ts项目
 1. npm init : 创建package.json
+2. npm install typescript -g : 全局安装 ts 后，才可以使用 tsc 命令
 2. tsc --init : 创建 tsc config.json
 3. tsc 文件名.ts 编译出js 文件
 
