--- a/ts/note/类型/类.md
+++ b/ts/note/类型/类.md
@@ -108,6 +108,28 @@ let dog = new Dog('wangwang')
 dog.eat()
 ```
 
+#### 泛型类
+
+```
+class Log<T> {
+
+    // 无法约束静态方法
+    // static run1(value: T) {
+    //     console.log(value)
+    //     return value
+    // }
+
+    run(value: T) {
+        console.log(value)
+        return value
+    }
+}
+let log11 = new Log<number>()
+log11.run(1)
+let log22 = new Log()
+log22.run({ a: 1 })
+```
+
 #### 类的链式调用
 > 每次返回this
 ```
