--- a/ts/note/类型/接口.md
+++ b/ts/note/类型/接口.md
@@ -2,19 +2,18 @@
  * @LastEditors: wudan01
  * @description: 文件描述
 -->
-# 接口
+# 接口定义
 > interface
 
-> 类型限制
+> 类型限制: 只能约束公共成员，无法约束私有成员和构造函数
 
-# 接口使用
-#### 定义接口
-###### 1. 简单值
+#### 1. 简单值
 > readonly: 只读
 
 > ? : 可选
 
 > [propName: type] 任意属性
+
 ```
 // 例如
 interface Names {
@@ -23,7 +22,7 @@ interface Names {
 }
 ```
 
-###### 2. 函数
+#### 2. 函数
 ```
 interface Lib {
     (): void;
@@ -52,7 +51,24 @@ let lib2 = getLib()
 lib2.doSomething()
 ```
 
-###### 3. 综合举例
+
+#### 3. 泛型
+
+```
+// 所有成员会受到泛型的约束
+interface Log<T> {
+    (value: T): T
+}
+
+interface Log1 {
+    // 只有这个成员受到泛型的约束
+    <T>(value: T): T
+}
+
+```
+
+# 接口使用
+#### 1. 接口作为变量类型限制
 ```
 interface List {
     // 只读属性
@@ -68,10 +84,7 @@ interface Result {
     // list 类型的数组 
     data: List[]
 }
-```
 
-#### 接口使用
-```
 // 限制 result 是 Result 类型
 function render(result: Result) {
     result.data.forEach((value) => {
@@ -90,8 +103,9 @@ let result = {
 }
 ```
 
-#### 绕过接口限制的方法
-###### 1. 字面量赋值变量，变量赋值接口
+
+######  接口绕过类型限制的方法
+> 1. 字面量赋值变量，变量赋值接口
 ```
 // 限制 render 参数符合 Result  接口规范
 function render(result:Result){
@@ -110,7 +124,7 @@ render(result)
 
 ```
 
-###### 2. 类型断言 as
+> 2. 类型断言 as
 > 手动判断类型符合
 ```
 render({
@@ -120,10 +134,83 @@ render({
     ]
 } as Result)
 ```
-###### 3. 字符串索引签名
+
+> 3. 字符串索引签名
 ```
 interface List {
     // 符合 key 为string, 值 类型为 string | number | any 的任意值
     [propName: string]: string | number | any;
+}
+```
+
+
+#### 2. 接口继承接口
+
+```
+interface Human {
+  name: string;
+  eat(): void;
+}
+
+interface Child {
+  cry(): void;
+}
+
+// 一个接口继承另一个接口
+interface Man extends Human {
+  run(): void;
+}
+
+// 一个接口继承多个接口
+interface Boy extends Man, Child {}
+
+let boy: Boy = {
+  name: '',
+  run() {},
+  eat() {},
+  cry() {},
+};
+```
+
+#### 3. 类实现接口 implements
+> 类必须实现接口所有变量及方法(可选的除外)
+
+> 只约束公有的
+
+```
+interface Human {
+  name: string;
+  eat(): void;
+}
+
+// 必须实现所有属性(可选除外)
+class Asian implements Human {
+  constructor(name: string) {
+    this.name = name;
+  }
+  name: string;
+  eat() {}
+  age: number = 0;
+  sleep() {}
+}
+```
+
+
+#### 4. 接口继承类
+> private,public,protected 都会被继承 
+
+```
+class Auto {
+  state = 1;
+  // 类有私有成员时，无法被接口继承
+  // private state1 = 1
+}
+
+// 接口在继承类时，public,private,protected 都会被继承
+interface AutoInterface extends Auto {}
+
+class C1 implements AutoInterface {
+  // 必须实现state
+  state = 1;
 }
 ```
