--- a/ts/note/类型/函数.md
+++ b/ts/note/类型/函数.md
@@ -59,3 +59,32 @@ function add8(...rest: any[]) {
 console.log(add8(1, 2))
 console.log(add8('a', 'b', 'c'))
 ```
+
+# 函数约束
+
+> 使用泛型 约束参数
+```
+function log<T>(value: T): T {
+    console.log(value);
+    return value;
+}
+log<string[]>(['a', ',b', 'c'])
+log(['a', ',b', 'c'])
+```
+> 使用接口继承约束泛型
+```
+interface Length {
+    length: number
+}
+
+// 泛型的类型约束
+// 使用泛型继承接口 进行约束 
+function logAdvance<T extends Length>(value: T): T {
+    console.log(value, value.length);
+    return value;
+}
+logAdvance([1])
+logAdvance('123')
+logAdvance({ length: 3 })
+
+```
