--- a/ts/note/类型/类型兼容.md
+++ b/ts/note/类型/类型兼容.md
@@ -1,36 +1,39 @@
-/*
- * X（目标类型） = Y（源类型），X 兼容 Y
- */
+<!--
+ * @LastEditors: wudan01
+ * @description: 文件描述
+-->
+# 1. 接口兼容
 
-// 类型兼容
-let s: string = 'a';
-s = null;
-
-// 接口兼容性
+> 接口多的兼容接口少的
+```
 interface X {
-  a: any;
-  b: any;
+    a: any;
+    b: any;
 }
 interface Y {
-  a: any;
-  b: any;
-  c: any;
+    a: any;
+    b: any;
+    c: any;
 }
-let x1: X = { a: 1, b: 2 };
-let y: Y = { a: 1, b: 2, c: 3 };
+let x1: X = { a: 1, b: 2 }
+let y: Y = { a: 1, b: 2, c: 3 }
 // x1 兼容 y
-x1 = y;
+x1 = y
 // y 不兼容 x
 // y = x1
+```
 
-// 函数兼容性
 
+# 2. 函数兼容
+
+#### 参数个数兼容
+
+```
+// 例子1
 type Handler = (a: number, b: number) => void;
 function hof(handler: Handler) {
   return handler;
 }
-
-// 1)参数个数
 
 // 参数可以比规定的少
 let handler1 = (a: number) => {};
@@ -39,7 +42,7 @@ hof(handler1);
 let handler2 = (a: number, b: number, c: number) => {};
 // hof(handler2)
 
-// 可选参数和剩余参数
+// 例子2
 let a11 = (p1: number, p2: number) => {};
 let b22 = (p1?: number, p2?: number) => {};
 let c33 = (...args: number[]) => {};
@@ -49,35 +52,19 @@ a11 = c33;
 // b22 = c33
 c33 = a11;
 c33 = b22;
+```
 
-// 2)参数类型
-let handler3 = (a: string) => {};
-// hof(handler3)
-
-// 接口兼容
-// 多的兼容少的
-interface Point3D {
-  x: number;
-  y: number;
-  z: number;
-}
-interface Point2D {
-  x: number;
-  y: number;
-}
-let p3d = (point: Point3D) => {};
-let p2d = (point: Point2D) => {};
-p3d = p2d;
-// p2d = p3d
-
-// 3) 返回值类型
+#### 返回值兼容
+```
 let f1 = () => ({ name: 'Alice' });
 let g = () => ({ name: 'Alice', location: 'Beijing' });
 f1 = g;
 // g = f1
+```
 
-// 函数重载
+#### 函数重载兼容
 
+```
 function overload(a: number, b: number): number;
 // 其他函数 参数要符合 目标函数
 function overload(a: string, b: string): string;
@@ -85,8 +72,12 @@ function overload(a: any, b: any): any {}
 // function overload(a: any): any {}
 // function overload(a: any, b: any, c: any): any {}
 // function overload(a: any, b: any) {}
+```
 
-// 枚举兼容性
+
+# 3. 枚举兼容
+> 枚举和数字兼容
+```
 enum Fruit {
   Apple,
   Banana,
@@ -100,9 +91,12 @@ let fruit: Fruit.Apple = 1;
 let no: number = Fruit.Apple;
 // 枚举之间是不兼容的
 // let color: Color.Red = Fruit.Apple
+```
 
-// 类兼容性
-// 静态成员和构造函数 不参与比较
+# 类兼容
+
+> 静态成员和构造函数 不参与比较
+```
 class A {
   constructor(p: number, q: number) {}
   id: number = 1;
@@ -122,8 +116,11 @@ let bb = new B(1);
 let cc = new C12(1, 2);
 aa = cc;
 cc = aa;
+```
 
-// 泛型兼容性
+# 泛型兼容
+
+```
 interface Empty<T> {
   // value: T
 }
@@ -142,3 +139,4 @@ let log2 = <U>(y: U): U => {
 };
 
 log1 = log2;
+```
