--- a/ts/note/类型/函数.md
+++ b/ts/note/类型/函数.md
@@ -44,11 +44,26 @@ interface add4 {
 ```
 
 # 函数重载
+> 一组具有相同名字，不同参数列表的和返回值无关的函数
+
+> 外部调用函数重载定义的函数时，只能调用重载签名，不能调用实现签名
+
+> 无法推断函数返回值
+
 ```
+// 函数签名 : 函数名称+函数参数+函数参数类型+返回值 组成
+
+// 重载签名
+// 只声明函数，不实现函数体
 function add8(...rest: number[]): number;
 function add8(...rest: string[]): string;
-function add8(...rest: any[]) {
+
+// 实现签名
+// 实现签名参数要能兼容重载签名函数参数(个数及类型匹配)
+// 实现函数体
+function add8(...rest: any[]):any {
     let first = rest[0];
+    // 根据参数类型 进入不同逻辑
     if (typeof first === 'number') {
         return rest.reduce((pre, cur) => pre + cur);
     }
@@ -56,7 +71,11 @@ function add8(...rest: any[]) {
         return rest.join('');
     }
 }
+
+// 匹配到第一个
 console.log(add8(1, 2))
+
+// 匹配到第二个
 console.log(add8('a', 'b', 'c'))
 ```
 
