--- a/ts/note/类型/函数.md
+++ b/ts/note/类型/函数.md
@@ -50,6 +50,8 @@ interface add4 {
 
 > 无法推断函数返回值
 
+#### 函数(function)重载
+> 举例
 ```
 // 函数签名 : 函数名称+函数参数+函数参数类型+返回值 组成
 
@@ -78,6 +80,49 @@ console.log(add8(1, 2))
 // 匹配到第二个
 console.log(add8('a', 'b', 'c'))
 ```
+
+#### 方法重载
+> static/普通方法都可以重载
+```
+// 根据 options 不同接口类型进行重载
+// 达到接口不同参数限制的效果
+// 重载签名
+static initialize(options: initializeOpt7);
+static initialize(options: initializeOpt);
+
+// 实现签名
+static initialize(options: initializeOpt | initializeOpt7 | object) {
+    // todo
+}
+```
+
+#### 构造函数重载
+> 举例见 重载函数参数不匹配解决方案
+
+#### 重载函数参数不匹配解决方案
+
+```
+1. 少的参数使用 ...rest 接收
+// 重载签名
+constructor(width: number, height: number);
+constructor(value: object, ...rest);
+
+// 实现签名
+constructor(params1, params2) {
+   todo
+}
+
+2. 所有参数改为可选参数
+// 重载签名
+constructor(width?: number, height?: number);
+constructor(shapeAreaParms?: type_ChartParam);
+// 实现签名
+constructor(value_?: any, value2_?: number) {
+    // todo
+}
+```
+
+
 
 # 函数约束
 
