--- a/ts/note/类型/基础类型.md
+++ b/ts/note/类型/基础类型.md
@@ -3,6 +3,18 @@
  * @description: 文件描述
 -->
 # 类型
+#### 1. 值作为类型
+> 变量实现类型时候，值只能为和类型同名的值
+```
+// 普通类型
+type iBoolean = boolean | 1 | 0
+
+// 接口
+interface option{
+  env: 7
+}
+```
+
 > 其他类型待补充
 
 # 问题
