--- a/ts/note/类型/类型转换.md
+++ b/ts/note/类型/类型转换.md
@@ -9,7 +9,14 @@ obj as any
 ```
 
 # <>
-> 强制将 getMessage 转为 Message 类型
+#### 类型转换
+> <类型> 变量 
+
 ```
+// 强制将 getMessage 转为 Message 类型
 <Message>getMessage(1)
 ```
+#### 限制变量
+> 变量<类型>
+> 不表示类型转换,表示当前变量是 此类型的 变量，是对变量的约束
+> 此时变量可取值 接口，构造函数，普通类型，泛型
