--- a/ts/note/类型/索引类型.md
+++ b/ts/note/类型/索引类型.md
@@ -5,29 +5,70 @@
 # 定义
 > 使用 keyof 关键字
 
-> 举例
+> keyof 是从一个类型(type),类(class),接口(interface) 的所有属性组成的联合类型
+
+> 类型2 = keyof 类型1 (类型2 是 类型1 所有属性组成的新类型)
+
+#### 类型(type)
 ```
-interface Obj {
-    a: number;
-    b: string;
+let obj = { address: '博鳌', phone: 1111, descri: '顺利' };
+
+// typeof obj 是 obj 的类型
+type keyofobjtype = keyof typeof obj; 
+
+// 输出 keyofobjtype
+// keyofobjtype = "address" | "phone" | "descri"
+```
+#### 接口(interface)
+```
+interface obj {
+  a: number;
+  b: string;
 }
 
-// keyof T : 类型 T 所有公共属性的字面量联合类型
-let key: keyof Obj
-
-console.log(key) // [1,2] ? 
-
-// T[K] 索引访问操作符
-let value: Obj['a']
+type keyofObj2 = keyof obj;
+let keyofObj: keyofObj2;
+// 或者
+let keyofObj1: keyof obj;
 ```
+#### 类(class)
+> keyof class 会包括 public 方法
 
-> 使用示例
 ```
-let obj = {
-    a: 1,
-    b: 2,
-    c: 3
+class Order {
+  static count: number;
+  constructor(
+    public orderId: number,
+    public date: Date,
+    public custname: string,
+    public phone: string,
+    public orderDetailArray: Array<string>
+  ) {}
+  doEat() {}
 }
+
+type keyofOrders = keyof Order;
+// public 方法不会报错
+let allvalue: keyofOrders = 'doEat';
+```
+
+
+# 应用
+#### T extends object + extends keyof
+> 限定参数k一定是T上存在的属性
+
+> 通过T[K] 访问具体值
+
+```
+interface obj {
+  a: number;
+  b: string;
+}
+
+let obj3 = {
+  a: 1,
+  b: '2',
+};
 
 // 改造前
 // function getValues(obj: any, keys: string[]) {
@@ -36,10 +77,17 @@ let obj = {
 
 // 改造后
 // 改造后  T 约束 obj, K 约束 keys
-// K 增加约束，继承 obj 所有属性的联合类型
+// K 增加约束，继承 obj 所有属性的联合类型(keyof T)
 function getValues<T, K extends keyof T>(obj: T, keys: K[]): T[K][] {
     return keys.map(key => obj[key])
 }
-console.log(getValues(obj, ['a', 'b']))
+
+// 调用
+// 全写
+// 泛型中写的是类型
+getValues<obj,keyof obj>(obj, ['a', 'b'])
+
+// 简写
+getValues(obj, ['a', 'b'])
 
 ```
