--- a/ts/bookfile/mock-tssenior/source/6chapter/2-28-2-34 深入类型守卫+结合Vue3源码深度掌握自定义守卫+抽象类+多态+TS4部分新特.md
+++ b/ts/bookfile/mock-tssenior/source/6chapter/2-28-2-34 深入类型守卫+结合Vue3源码深度掌握自定义守卫+抽象类+多态+TS4部分新特.md
@@ -109,7 +109,7 @@
 
 为什么要用类型守卫：
 
-**类型守卫定义：** 在 语句的块级作用域【if语句内或条目运算符表达式内】缩小变量的一种类型推断的行为。
+**类型守卫定义：** 在 语句的块级作用域【if语句内或条目运算符表达式?:内】缩小变量的一种类型推断的行为。
 
 **类型守卫产生时机**：TS  条件语句中遇到下列条件关键字时，会在语句的块级作用域内缩小变量的类型，这种类型推断的行为称作类型守卫 ( Type Guard )。类型守卫可以帮助我们在块级作用域中获得更为需要的精确变量类型，从而减少不必要的类型断言。
 
