--- a/ts/note/类型/类型守卫.md
+++ b/ts/note/类型/类型守卫.md
@@ -2,9 +2,21 @@
  * @LastEditors: wudan01
  * @description: 文件描述
 -->
-> 也称 类型守卫
 
-> 类型保护的几种方式
+> 类型守卫也称类型保护
+
+# 类型守卫的几种方式
+####  is 
+
+#### as
+
+#### instanceof
+
+#### in
+
+#### typeof
+
+> 综合举例
 ```
 enum Type { Strong, Week }
 
@@ -75,4 +87,24 @@ function getLanguage(type: Type, x: string | number) {
 getLanguage(Type.Week, 1)
 
 
+```
+
+# 自定义类型守卫
+> 通过写 形参 is A，只有当函数返回 true 时，形参被确定为 A 类型
+```js
+function  函数名( 形参：参数类型【参数类型大多为any】)  : 形参 is A类型 =boolean+类型守卫能力{
+	return  true or false
+}
+```
+
+> 实际例子
+```
+if (isString(value)) {
+    console.log(key + ':', StringUtil.trimSpace(value));
+}
+
+function isString(str: any): str is string {
+  // str is string 可以使 返回值是true 时，返回类型 是 string 类型
+  return typeof str === 'string';
+}
 ```
