--- a/ts/note/类型/元祖.md
+++ b/ts/note/类型/元祖.md
@@ -3,9 +3,13 @@
  * @description: 文件描述
 -->
 
-# 定义
+#### 定义
+> 1. 定义时的元素的类型确定，但各个元素的类型不必相同。
+> 2. 为元素赋值时，该值必须是当前位置的类型
 
-todo
+```
+let salary: [string, number, number, string] = ['王五', 8000, 10000, 'ok'];
+```
 
 #### 可变元组
 ###### 变量使用 rest, 元祖使用any
