--- a/ts/note/类型/基础类型.md
+++ b/ts/note/类型/基础类型.md
@@ -4,6 +4,16 @@
 -->
 # 类型
 
+# 定义变量
+```
+// 普通变量
+let price: number = 3
+
+// 复杂变量
+type StudentType = { name: string, age: number }
+let stuObj: StudentType = { name: "wangwu", age: 23 }
+```
+
 #### readonly 及 const
 > js const 无法检测 对象变量内部修改，ts 可以
 ```
