--- a/ts/note/类型/交叉,联合类型.md
+++ b/ts/note/类型/交叉,联合类型.md
@@ -25,7 +25,7 @@ let pet: DogInterface & CatInterface = {
 # 联合类型 |
 > 类型不确定，是多个值中的一个
 
-> 基础示例
+#### 基础示例
 ```
 let a: number | string = 1
 
@@ -56,7 +56,7 @@ function getPet(master: Master) {
 }
 ```
 
-> 综合应用
+#### 综合应用
 ```
 interface Square {
     kind: "square";
@@ -85,4 +85,20 @@ function area(s: Shape) {
     }
 }
 console.log(area({ kind: 'circle', radius: 1 }))
+```
+
+#### 联合类型技巧
+> 使用 联合类型 解决 布尔值判断
+```
+type IncreaseBoolean = Boolean | 1 | 0
+
+function mounted(isStartUp: IncreaseBoolean) {
+  if (isStartUp) {
+    console.log("yes");
+  } else {
+    console.log("no");
+  }
+}
+
+mounted(1)
 ```
