--- a/ts/note/类型/接口.md
+++ b/ts/note/类型/接口.md
@@ -5,6 +5,8 @@
 # 接口定义
 > interface
 
+> 为类进行属性定义与方法声明 但没有任何赋值和实现的数据类型
+
 > 类型限制: 只能约束公共成员，无法约束私有成员和构造函数
 
 #### 1. 简单值
@@ -19,6 +21,23 @@
 interface Names {
     [x: string]: any;
     [z: number]: number;
+}
+```
+
+```
+// 定义接口
+interface Getter {
+  // 可索引类型 key 是 string 类型，value 是函数
+  // 限定 value 参数 为 state,并且 类型为any
+  [key: string]: (state: any) => void
+}
+
+// 实现接口
+let getter: Getter = {
+  getProductInfo(state: string) {
+  },
+  getOneProduct(state: string) {
+  }
 }
 ```
 
@@ -51,6 +70,17 @@ let lib2 = getLib()
 lib2.doSomething()
 ```
 
+> 接口直接做函数名，声明的是一个函数类型
+```
+interface ActionContext {
+  (state: any, commit: any): void
+}
+
+let actionContext: ActionContext = (state: any, commit: any): void => {
+  console.log("state:", state);
+}
+actionContext("abc", "df")
+```
 
 #### 3. 泛型
 
@@ -65,6 +95,25 @@ interface Log1 {
     <T>(value: T): T
 }
 
+```
+
+#### 4. 同名接口
+> 会自动合并
+
+```js
+interface Error {
+  name: string;
+}
+
+interface Error {
+  message: string;
+  stack?: string;
+}
+// 接口合并
+let error: Error = {
+  message: "空指针",
+  name: "NullPointException"
+}
 ```
 
 # 接口使用
