--- a/ts/note/类型/基础类型.md
+++ b/ts/note/类型/基础类型.md
@@ -52,3 +52,38 @@ interface option{
 
 > Object 是构造函数, 挂有很多方法
 
+#### type 和 interface 
+###### 相同
+> 定义类型
+###### 区别
+1. 范围不一样,type 范围更大
+
+> interface 只能定义对象类型或接口当名字的函数类型。
+
+> type 可以定义任何类型，包括基础类型、联合类型 ，交叉类型，元组。
+
+```
+// type 定义基础类型
+type num=number 
+
+//  type 定义联合类型例子1：
+type baseType=string |number | symbol
+
+//  type 定义联合类型例子2：
+interface Car { brandNo: string}
+interface Plane { No: string; brandNo: string}
+type TypVechile = Car| Plane 
+
+//  元组
+interface Car { brandNo: string}
+interface Plane { No: string; brandNo: string}
+type TypVechile = [Car, Plane]
+```
+
+2. interface 可以继承，type 不可以
+> 接口可以extends 一个或者多个 接口或类， 也可以继承type，但type 类型没有继承功能
+
+3. type 有交叉类型，接口没有
+> 用 type 交叉类型 & 可让类型中的成员合并成一个新的 type 类型，但接口不能交叉合并
+
+4. 接口可以合并，type 不可以，会报错
